# julich_testAssignment_cubePlugin

./: taskTopic.txt
cubegui-4.4-TP3/: .INSTALL.swp  AUTHORS  CUBE_LATEST_RELEASE  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  config.summary  configure  configure.ac  cubegui.summary  user_provided_configure_args
cubegui-4.4-TP3/autom4te.cache/: output.0  requests  traces.0
cubegui-4.4-TP3/build-config/: VERSION
cubegui-4.4-TP3/build-config/m4/: ac_cube_cubelib.m4  ac_cube_dbus_detection.m4  ac_cube_debug.m4  ac_cube_examples.m4  ac_cube_general.m4  ac_cube_gui_plugins.m4  ac_cube_scorep_instrumentation.m4  ac_cube_version_revision_vars.m4  autotroll.m4  libtool.m4
cubegui-4.4-TP3/build-frontend/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  config.summary  configure  configure.ac  cube  cubediff-plugin.la  cubediff_plugin_la-CubeDiff.lo  cubediff_plugin_la-CubeDiff.moc.lo  cubegui-config  editor-plugin.la  editor_plugin_la-CPPSyntaxHighlighter.lo  editor_plugin_la-CPPSyntaxHighlighter.moc.lo  editor_plugin_la-EditorPlugin.lo  editor_plugin_la-EditorPlugin.moc.lo  editor_plugin_la-FortranSyntaxHighlighter.lo  editor_plugin_la-FortranSyntaxHighlighter.moc.lo  launch-plugin.la  launch_plugin_la-Launch.lo  launch_plugin_la-Launch.moc.lo  launch_plugin_la-LaunchInfo.lo  launch_plugin_la-LaunchInfo.moc.lo  launch_plugin_la-LaunchPlugin.lo  launch_plugin_la-LaunchPlugin.moc.lo  libadvancedcm-plugin.la  libadvancedcm_plugin_la-AdvancedColorMaps.lo  libadvancedcm_plugin_la-AdvancedColorMaps.moc.lo  libadvancedcm_plugin_la-AdvancedColorMapsSettings.lo  libadvancedcm_plugin_la-AdvancedColorMapsSettings.moc.lo  libadvancedcm_plugin_la-ColorMapExtended.lo  libadvancedcm_plugin_la-ColorMapExtended.moc.lo  libadvancedcm_plugin_la-ColorMapPlot.lo  libadvancedcm_plugin_la-ColorMapPlot.moc.lo  libadvancedcm_plugin_la-ColorMapsFactory.lo  libadvancedcm_plugin_la-CubehelixColorMap.lo  libadvancedcm_plugin_la-CubehelixColorMap.moc.lo  libadvancedcm_plugin_la-DivergentColorMap.lo  (+167 more)
cubegui-4.4-TP3/build-frontend/.deps/: cube-main.Po  cubediff_plugin_la-CubeDiff.Plo  cubediff_plugin_la-CubeDiff.moc.Plo  cubegui_config-cubegui_config.Po  cubegui_config-cubegui_config_data.Po  cubegui_config-cubegui_config_data_frontend.Po  cubegui_config-cubegui_config_helper.Po  editor_plugin_la-CPPSyntaxHighlighter.Plo  editor_plugin_la-CPPSyntaxHighlighter.moc.Plo  editor_plugin_la-EditorPlugin.Plo  editor_plugin_la-EditorPlugin.moc.Plo  editor_plugin_la-FortranSyntaxHighlighter.Plo  editor_plugin_la-FortranSyntaxHighlighter.moc.Plo  launch_plugin_la-Launch.Plo  launch_plugin_la-Launch.moc.Plo  launch_plugin_la-LaunchInfo.Plo  launch_plugin_la-LaunchInfo.moc.Plo  launch_plugin_la-LaunchPlugin.Plo  launch_plugin_la-LaunchPlugin.moc.Plo  libadvancedcm_plugin_la-AdvancedColorMaps.Plo  libadvancedcm_plugin_la-AdvancedColorMaps.moc.Plo  libadvancedcm_plugin_la-AdvancedColorMapsSettings.Plo  libadvancedcm_plugin_la-AdvancedColorMapsSettings.moc.Plo  libadvancedcm_plugin_la-ColorMapExtended.Plo  libadvancedcm_plugin_la-ColorMapExtended.moc.Plo  libadvancedcm_plugin_la-ColorMapPlot.Plo  libadvancedcm_plugin_la-ColorMapPlot.moc.Plo  libadvancedcm_plugin_la-ColorMapsFactory.Plo  libadvancedcm_plugin_la-CubehelixColorMap.Plo  libadvancedcm_plugin_la-CubehelixColorMap.moc.Plo  libadvancedcm_plugin_la-DivergentColorMap.Plo  libadvancedcm_plugin_la-DivergentColorMap.moc.Plo  libadvancedcm_plugin_la-ImprovedRainbowColorMap.Plo  libadvancedcm_plugin_la-ImprovedRainbowColorMap.moc.Plo  libadvancedcm_plugin_la-RGBDefinerWidget.Plo  libadvancedcm_plugin_la-RGBDefinerWidget.moc.Plo  libadvancedcm_plugin_la-SequentialColorMap.Plo  libadvancedcm_plugin_la-SequentialColorMap.moc.Plo  libbarplot_plugin_la-Barplot.Plo  libbarplot_plugin_la-Barplot.moc.Plo  (+149 more)
cubegui-4.4-TP3/build-frontend/.libs/: cube  cubediff-plugin.la  cubediff-plugin.lai  cubediff-plugin.soT  editor-plugin.la  editor-plugin.lai  editor-plugin.soT  launch-plugin.la  launch-plugin.lai  launch-plugin.soT  libadvancedcm-plugin.la  libadvancedcm-plugin.lai  libbarplot-plugin.la  libbarplot-plugin.lai  libbarplot-plugin.soT  libcube4gui.la  libcube4gui.lai  libcube4gui.so.7  libgraphwidgetcommon-plugin.la  libgraphwidgetcommon-plugin.lai  libgraphwidgetcommon-plugin.so.7  libheatmap-plugin.la  libheatmap-plugin.lai  libheatmap-plugin.soT  paraver-plugin.la  paraver-plugin.lai  paraver-plugin.soT  statistic-plugin.la  statistic-plugin.lai  statistic-plugin.soT  sysbox-plugin.la  sysbox-plugin.lai  sysbox-plugin.soT  topology-plugin.la  topology-plugin.lai
cubegui-4.4-TP3/build-includes/: common.am  frontend-only.am  frontend-only2.am
cubegui-4.4-TP3/doc/: Makefile.top.inc.am  doxygen-gui.cfg  doxygen-installation.cfg  doxygen-plugin-dev.cfg
cubegui-4.4-TP3/doc/dox-gui/: Makefile.dox-gui.inc.am
cubegui-4.4-TP3/doc/dox-installation/: Makefile.dox-installation.inc.am
cubegui-4.4-TP3/doc/dox-plugin-dev/: Makefile.dox-plugin-dev.inc.am
cubegui-4.4-TP3/doc/doxygen/config/: doxygen-gui.cfg.in  doxygen-installation.cfg.in  doxygen-plugin-dev.cfg.in
cubegui-4.4-TP3/examples/: Makefile.frontend  Makefile.frontend.in  Makefile.gui-plugin.examples.inc.am
cubegui-4.4-TP3/examples/GUI/: summary.ini  trace.ini
cubegui-4.4-TP3/src/: config-frontend.h  config-frontend.h.in  config.h  cubegui-version.h  cubegui-version.h.in  stamp-h1
cubegui-4.4-TP3/src/GUI-qt/: Makefile.gui-qt4.inc.am  resources.qrc  resources.qrc.cpp
cubegui-4.4-TP3/src/GUI-qt/display/: AggregatedTreeItem.cpp  AggregatedTreeItem.h  BoxPlot.cpp  BoxPlot.h  CallTree.cpp  CallTree.h  CallTreeLabelDialog.cpp  CallTreeLabelDialog.h  CallTreeLabelDialog.moc.cpp  CallTreeView.cpp  CallTreeView.h  (+137 more)
cubegui-4.4-TP3/src/tools/: Makefile.inc.am  cubegui_config.cpp  cubegui_config.hpp  cubegui_config_data.cpp  cubegui_config_data.hpp  cubegui_config_data_build.cpp.in  cubegui_config_data_frontend.cpp  cubegui_config_helper.cpp  cubegui_config_library_dependencies_frontend_inc.hpp  cubegui_config_usage.dox.in  cubegui_config_usage.h  cubegui_tools.h
(+1073 files in other folders)
